--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.14",
+    "@types/styled-components": "^4.4.1",
     "prettier": "^1.19.1",
     "typescript": "^3.7.3"
   },
